[metadata]
name = celery_garden
version = attr: celery_garden.__version__
description = Celery Garden
long_description = file: README.rst
author = Max Simmons
author_email = max@mxsmns.net

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[flake8]
extend-exclude = .venv,venv

[mypy]
files = src/**/*.py tests/**/*.py
exclude = setup.py
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_generics = True
no_implicit_optional = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False

[coverage:run]
branch = True
source = src

[isort]
profile = black
